# vibe-search

./: .gitignore  README.md  detailed_analysis_communities.csv  detailed_analysis_edges.csv  detailed_analysis_nodes.csv  docker-compose.yml  env.sh  main.py  pyproject.toml  requirements.txt  results.json
classification/: main.py
database/: Dockerfile  psql.py
database/database_setup_scripts/: 01_extensions.sql  02_age_helpers.sql  03_tables.sql
debug_output/0b4d1b3d-851c-4f92-8e22-61ec3b4bbb1b/: pairings_summary.txt
debug_output/59767541-6df1-4b7e-a6ca-ef3f10609194/: pairings_summary.txt
debug_output/67743de3-6bd0-4c6c-9791-6a80b96529c4/: pairings_summary.txt
debug_output/c36c930c-72e3-4885-9a1d-ad46099f6f5e/: pairings_summary.txt
debug_output/e9163f5f-e5f3-4e26-bb9f-6cce9bb96c34/: pairings_summary.txt
src/classification/: Node.py  debug.py  meth.py  tree.py  voice_yolo_debug.py
src/identity/: id.py
src/media/audio/: extract.py  fake_audio_file.py  map.py  transcribe.py  transcribe_and_diarize.py  voice_embedding.py
src/media/video/: __init__.py  action.py  yolo.py
src/media/video/face/: face_embeddings.py  face_snapshots.py  heuristic.py  main.py  mar.py
src/media/video/misc/: detect.py  image_helpers.py
src/media/video_shit_boxes/: heuristic.py  yolo.py
src/media/video_shit_boxes/face/: face_embeddings.py  face_snapshots.py  main.py  mar.py
src/media/video_shit_boxes/misc/: image_helpers.py
src/models/: audio.py  detection.py  embedding.py  frame.py  identified.py  relate.py
src/relations/: meth.py  relate.py  voice_yolo_debug.py
src/state/AI/: audio_models.py  bert_models.py  face_models.py  lazy_loader.py  object_detection_models.py
src/state/database/: __init__.py  psql.py
src/state/database/database_setup_scripts/: 02_tables.sql
src/utils/: cache.py  yt_download.py
temp/pretrained_models/spkrec-xvect-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
