[project]
name = "vibe-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "asteroid-filterbanks==0.4.0",
    "attrs==25.3.0",
    "audioop-lts==0.2.2",
    "audioread==3.0.1",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorlog==6.9.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "diskcache==5.6.3",
    "dlib==20.0.0",
    "docopt==0.6.2",
    "einops==0.8.1",
    "filelock==3.19.1",
    "fonttools==4.59.2",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "hf-xet==1.1.9",
    "huggingface-hub==0.34.4",
    "hyperpyyaml==1.2.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "julius==0.2.7",
    "kiwisolver==1.4.9",
    "lap==0.5.12",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "lightning==2.5.5",
    "lightning-utilities==0.15.2",
    "llvmlite==0.44.0",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "openai-whisper",
    "opencv-python==4.12.0.88",
    "optuna==4.5.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "polars==1.33.0",
    "pooch==1.8.2",
    "primepy==1.3",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "pyannote-audio==3.3.2",
    "pyannote-core==5.0.0",
    "pyannote-database==5.1.3",
    "pyannote-metrics==3.2.1",
    "pyannote-pipeline==3.0.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.5",
    "pytorch-metric-learning==2.9.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "rich==14.1.0",
    "ruamel-yaml==0.18.15",
    "ruamel-yaml-clib==0.2.12",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "semver==3.0.4",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "soxr==0.5.0.post1",
    "speechbrain==1.0.3",
    "sqlalchemy==2.0.43",
    "standard-aifc==3.13.0",
    "standard-chunk==3.13.0",
    "standard-sunau==3.13.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboardx==2.6.4",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "torch==2.8.0",
    "torch-audiomentations==0.12.0",
    "torch-pitch-shift==1.2.5",
    "torchaudio==2.8.0",
    "torchmetrics==1.8.2",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "typer==0.17.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ultralytics==8.3.195",
    "ultralytics-thop==2.0.17",
    "urllib3==2.5.0",
    "yarl==1.20.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "c0d2f624c09dc18e709e37c2ad90c039a4eb72a2" }
